--- a/declarative/single-app/my-application.yml
+++ b/declarative/single-app/my-application.yml
@@ -13,7 +13,7 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/codefresh-contrib/gitops-certification-examples.git
+    repoURL: https://github.com/vamsyrajuru/argocd.git
     targetRevision: HEAD
     path: ./declarative/manifests
    
