--- a/declarative/parent-app/my-parent-app.yml
+++ b/declarative/parent-app/my-parent-app.yml
@@ -10,7 +10,7 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/codefresh-contrib/gitops-certification-examples.git
+    repoURL: https://github.com/vamsyrajuru/argocd.git
     targetRevision: HEAD
     path: ./declarative/multiple-apps
    
